Prevent scrolling main UI
Resolves an issue on MacOS where the contents of the Tauri window could be "scrolled" out of place.

--- a/src/main.css
+++ b/src/main.css
@@ -32,6 +32,10 @@
 
 /* custom-styles */
 
+html {
+  overscroll-behavior: none;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
